src/qnn_wrapper.h

// 定义状态码，和 C++ 中 sample_app::StatusCode 保持一致
typedef enum {
    QNN_STATUS_SUCCESS = 0,
    QNN_STATUS_FAILURE,
    QNN_STATUS_FAILURE_INPUT_LIST_EXHAUSTED,
    QNN_STATUS_FAILURE_SYSTEM_ERROR,
    QNN_STATUS_FAILURE_SYSTEM_COMMUNICATION_ERROR,
    QNN_STATUS_FEATURE_UNSUPPORTED
} QnnStatus;
// 定义输出数据类型
typedef enum {
    QNN_OUTPUT_DATA_TYPE_FLOAT_ONLY = 0,
    QNN_OUTPUT_DATA_TYPE_NATIVE_ONLY,
    QNN_OUTPUT_DATA_TYPE_FLOAT_AND_NATIVE,
    QNN_OUTPUT_DATA_TYPE_INVALID
} QnnOutputDataType;
// 定义输入数据类型
typedef enum {
    QNN_INPUT_DATA_TYPE_FLOAT = 0,
    QNN_INPUT_DATA_TYPE_NATIVE,
    QNN_INPUT_DATA_TYPE_INVALID
} QnnInputDataType;
// 不透明指针类型，用户只能通过接口操作
typedef struct QnnSampleApp QnnSampleApp;
/*
 * 获取浮点数输出张量。
 * 参数 outputs 是一个输出指针，函数内部会分配内存保存各个输出数据（调用者需要对每个输出以及 outputs 数组调用 free() 释放）。
 * out_sizes 返回各输出张量的元素个数，numOutputs 返回输出张量数量。
 */
QnnStatus qnn_sample_app_get_float_outputs(QnnSampleApp* app,
                                           float*** outputs,
                                           size_t** out_sizes,
                                           size_t* numOutputs,
                                           int graphIdx);
/*
 * 获取HTP架构版本号
 * 参数 backendPath 为后端库路径
 * 返回HTP架构版本号，如果发生错误则返回-1
 */
int qnn_get_htp_arch_version(const char* backendPath);
// 定义异步回调函数类型
typedef void (*QnnAsyncCallback)(QnnStatus status, void* userData);
// 异步函数声明
void qnn_sample_app_create_async(const char* backendPath, 
                              const char* modelPath, 
                              QnnOutputDataType outputDataType, 
                              QnnInputDataType inputDataType, 
                              const char* dataDir,
                              void (*callback)(QnnSampleApp* app, void* userData),
                              void* userData);
void qnn_sample_app_destroy_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_initialize_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_initialize_profiling_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_create_context_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_compose_graphs_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_finalize_graphs_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_execute_graphs_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_register_op_packages_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_create_from_binary_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_save_binary_async(QnnSampleApp* app, const char* outputPath, const char* binaryName, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_free_context_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);