lib/qnn_wrapper_bindings_generated.dart


  /// 获取浮点数输出张量。
  /// 参数 outputs 是一个输出指针，函数内部会分配内存保存各个输出数据（调用者需要对每个输出以及 outputs 数组调用 free() 释放）。
  /// out_sizes 返回各输出张量的元素个数，numOutputs 返回输出张量数量。
  QnnStatus qnn_sample_app_get_float_outputs(
    ffi.Pointer<QnnSampleApp> app,
    ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Float>>> outputs,
    ffi.Pointer<ffi.Pointer<ffi.Size>> out_sizes,
    ffi.Pointer<ffi.Size> numOutputs,
    int graphIdx,
  ) {
    return QnnStatus.fromValue(
      _qnn_sample_app_get_float_outputs(
        app,
        outputs,
        out_sizes,
        numOutputs,
        graphIdx,
      ),
    );
  }

  late final _qnn_sample_app_get_float_outputsPtr = _lookup<
    ffi.NativeFunction<
      ffi.UnsignedInt Function(
        ffi.Pointer<QnnSampleApp>,
        ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Float>>>,
        ffi.Pointer<ffi.Pointer<ffi.Size>>,
        ffi.Pointer<ffi.Size>,
        ffi.Int,
      )
    >
  >('qnn_sample_app_get_float_outputs');
  late final _qnn_sample_app_get_float_outputs =
      _qnn_sample_app_get_float_outputsPtr
          .asFunction<
            int Function(
              ffi.Pointer<QnnSampleApp>,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Float>>>,
              ffi.Pointer<ffi.Pointer<ffi.Size>>,
              ffi.Pointer<ffi.Size>,
              int,
            )
          >();

  /// 获取HTP架构版本号
  /// 参数 backendPath 为后端库路径
  /// 返回HTP架构版本号，如果发生错误则返回-1
  int qnn_get_htp_arch_version(ffi.Pointer<ffi.Char> backendPath) {
    return _qnn_get_htp_arch_version(backendPath);
  }

  late final _qnn_get_htp_arch_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'qnn_get_htp_arch_version',
      );
  late final _qnn_get_htp_arch_version =
      _qnn_get_htp_arch_versionPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// 异步函数声明
  void qnn_sample_app_create_async(
    ffi.Pointer<ffi.Char> backendPath,
    ffi.Pointer<ffi.Char> modelPath,
    QnnOutputDataType outputDataType,
    QnnInputDataType inputDataType,
    ffi.Pointer<ffi.Char> dataDir,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<QnnSampleApp> app,
          ffi.Pointer<ffi.Void> userData,
        )
      >
    >
    callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_create_async(
      backendPath,
      modelPath,
      outputDataType.value,
      inputDataType.value,
      dataDir,
      callback,
      userData,
    );
  }

  late final _qnn_sample_app_create_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.UnsignedInt,
        ffi.UnsignedInt,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<
          ffi.NativeFunction<
            ffi.Void Function(
              ffi.Pointer<QnnSampleApp> app,
              ffi.Pointer<ffi.Void> userData,
            )
          >
        >,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_create_async');
  late final _qnn_sample_app_create_async =
      _qnn_sample_app_create_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<
                ffi.NativeFunction<
                  ffi.Void Function(
                    ffi.Pointer<QnnSampleApp> app,
                    ffi.Pointer<ffi.Void> userData,
                  )
                >
              >,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_destroy_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_destroy_async(app, callback, userData);
  }

  late final _qnn_sample_app_destroy_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_destroy_async');
  late final _qnn_sample_app_destroy_async =
      _qnn_sample_app_destroy_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_initialize_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_initialize_async(app, callback, userData);
  }

  late final _qnn_sample_app_initialize_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_initialize_async');
  late final _qnn_sample_app_initialize_async =
      _qnn_sample_app_initialize_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_initialize_profiling_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_initialize_profiling_async(app, callback, userData);
  }

  late final _qnn_sample_app_initialize_profiling_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_initialize_profiling_async');
  late final _qnn_sample_app_initialize_profiling_async =
      _qnn_sample_app_initialize_profiling_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_create_context_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_create_context_async(app, callback, userData);
  }

  late final _qnn_sample_app_create_context_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_create_context_async');
  late final _qnn_sample_app_create_context_async =
      _qnn_sample_app_create_context_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_compose_graphs_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_compose_graphs_async(app, callback, userData);
  }

  late final _qnn_sample_app_compose_graphs_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_compose_graphs_async');
  late final _qnn_sample_app_compose_graphs_async =
      _qnn_sample_app_compose_graphs_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_finalize_graphs_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_finalize_graphs_async(app, callback, userData);
  }

  late final _qnn_sample_app_finalize_graphs_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_finalize_graphs_async');
  late final _qnn_sample_app_finalize_graphs_async =
      _qnn_sample_app_finalize_graphs_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_execute_graphs_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_execute_graphs_async(app, callback, userData);
  }

  late final _qnn_sample_app_execute_graphs_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_execute_graphs_async');
  late final _qnn_sample_app_execute_graphs_async =
      _qnn_sample_app_execute_graphs_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_register_op_packages_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_register_op_packages_async(app, callback, userData);
  }

  late final _qnn_sample_app_register_op_packages_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_register_op_packages_async');
  late final _qnn_sample_app_register_op_packages_async =
      _qnn_sample_app_register_op_packages_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_create_from_binary_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_create_from_binary_async(app, callback, userData);
  }

  late final _qnn_sample_app_create_from_binary_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_create_from_binary_async');
  late final _qnn_sample_app_create_from_binary_async =
      _qnn_sample_app_create_from_binary_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_save_binary_async(
    ffi.Pointer<QnnSampleApp> app,
    ffi.Pointer<ffi.Char> outputPath,
    ffi.Pointer<ffi.Char> binaryName,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_save_binary_async(
      app,
      outputPath,
      binaryName,
      callback,
      userData,
    );
  }

  late final _qnn_sample_app_save_binary_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_save_binary_async');
  late final _qnn_sample_app_save_binary_async =
      _qnn_sample_app_save_binary_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_free_context_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_free_context_async(app, callback, userData);
  }
